; ModuleID = '/home/carl/AnghaBench/RetroArch/tasks/extr_task_content.c_task_push_start_builtin_core.c'
source_filename = "/home/carl/AnghaBench/RetroArch/tasks/extr_task_content.c_task_push_start_builtin_core.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RARCH_PATH_CONTENT = common dso_local global i32 0, align 4
@RARCH_MENU_CTL_SET_PENDING_QUICK_MENU = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @task_push_start_builtin_core(i32* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %10 = load i32, i32* @RARCH_PATH_CONTENT, align 4
  %11 = call i32 @path_clear(i32 %10)
  %12 = load i32, i32* %7, align 4
  %13 = call i32 @retroarch_set_current_core_type(i32 %12, i32 1)
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @task_load_content_callback(i32* %14, i32 1, i32 0)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %4
  %18 = call i32 (...) @retroarch_menu_running()
  store i32 0, i32* %5, align 4
  br label %20

19:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %20

20:                                               ; preds = %19, %17
  %21 = load i32, i32* %5, align 4
  ret i32 %21
}

declare dso_local i32 @path_clear(i32) #1

declare dso_local i32 @retroarch_set_current_core_type(i32, i32) #1

declare dso_local i32 @task_load_content_callback(i32*, i32, i32) #1

declare dso_local i32 @retroarch_menu_running(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
